# scalable-computing-examples

./: .gitignore  12-software-design.ipynb  14-zarr_and_cmip6.ipynb  Mon_postlunch.ipynb  myplot.py
04-pleasing/: pleasing_TCB.ipynb
04-pleasing/runinfo/000/submit_scripts/: parsl.HighThroughputExecutor.block-0.1711407067.7292516.sh  parsl.HighThroughputExecutor.block-0.1711407067.7292516.sh.err  parsl.HighThroughputExecutor.block-1.1711407707.2909567.sh  parsl.HighThroughputExecutor.block-1.1711407707.2909567.sh.err  parsl.HighThroughputExecutor.block-1.1711407707.2909567.sh.out  parsl.HighThroughputExecutor.block-2.1711408354.5126784.sh  parsl.HighThroughputExecutor.block-2.1711408354.5126784.sh.err
04-pleasing/runinfo/001/submit_scripts/: parsl.HighThroughputExecutor.block-0.1711408424.8322468.sh  parsl.HighThroughputExecutor.block-0.1711408424.8322468.sh.err  parsl.HighThroughputExecutor.block-1.1711408644.0706675.sh  (+2 more)
05-xarray_netCDF/: 05-xarray_demo.ipynb
06-dask/: 06-dask_demo.ipynb
09-Geopandas/: 09-geopandas.ipynb  09-withRioXarray.ipynb
15-containers/: Dockerfile  compose-basic.yaml  compose.yaml
15-containers/tcb-course-exercises/: history_for_print.txt
15-containers/tcb-course-exercises/adc-course-updated/: history_w_containers.txt
15-containers/tcb-course-exercises/adcmodel/: package_experiment.ipynb  pyproject.toml
15-containers/tcb-course-exercises/adcmodel/adcmodel/: data.py
15-containers/tcb-course-exercises/adcmodel/tests/: test_data.py
group-project/: session-07-group.ipynb  session-07.ipynb  session-11-tcb.ipynb
(+6 files in other folders)
